Fixes to document modes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<script src="assets/ace/build/src-noconflict/ace.js"></script>
 	<script src="assets/ace/build/src-noconflict/mode-html.js"></script>
 	<script src="assets/ace/build/src-noconflict/mode-markdown.js"></script>
-	<script src="build/build.js"></script>
+	<script src="build/build.min.js"></script>
 	<link href="build/build.css" rel="stylesheet" />
 	<link href="assets/css/style.css" rel="stylesheet" />
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" />
