--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Code Sandbox</title>
+	<title>CodeBox</title>
 	<script src="assets/ace/build/src-noconflict/ace.js"></script>
 	<script src="assets/ace/build/src-noconflict/mode-html.js"></script>
 	<script src="assets/ace/build/src-noconflict/mode-markdown.js"></script>
