--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 	<script src="assets/ace/build/src-noconflict/ace.js"></script>
 	<script src="assets/ace/build/src-noconflict/mode-html.js"></script>
 	<script src="assets/ace/build/src-noconflict/mode-markdown.js"></script>
+	<script src="http://yandex.st/highlightjs/7.3/highlight.min.js"></script>
 	<script src="build/build.min.js"></script>
 	<link href="build/build.css" rel="stylesheet" />
 	<link href="assets/css/style.css" rel="stylesheet" />
 	<link href="assets/css/font-awesome.min.css" rel="stylesheet" />
+	<link href="http://yandex.st/highlightjs/7.3/styles/default.min.css" rel="stylesheet" />
 </head>
 <body onload="require('jssandbox');">
 </body>
